Added meta tags.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Should I Wash My Car?</title>
+
+  <meta name="description" content="Should you wash your car? Find out now.">
+  <meta property="og:site_name" content="Should I wash my car?">
+  <meta property="og:url" content="https://shouldiwash.info">
+  <meta property="og:title" content="Should I wash my car?">
+  <meta property="og:description" content="Should you wash your car? Find out now.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://shouldiwash.info/favicon.png">
+
   <link rel="icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
